--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
     <header class="page-header">
       <h1 class="page-title">Map Based Questions – Class 12 Political Science</h1>
       <p class="page-subtitle">Indian Political Maps • States • Union Territories • Important Leaders & Events</p>
-      <p class="meta-line">Prepared by: <strong>[Your Name]</strong></p>
+      <p class="meta-line">Prepared by: <strong>Bhavishya Godara</strong></p>
       <p class="meta-line">Class 12 – Political Science</p>
       <div class="badge-strip">
         <span class="badge-dot"></span>
@@ -922,4 +922,5 @@
 
   </div>
 </body>
+
 </html>
